--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         uses: microsoft/setup-msbuild@v2
 
       - name: Build
-        run: msbuild .\DownloadManagerSolution.sln -t:rebuild -verbosity:diag -p:Configuration=Release -p:Platform=x64
+        run: msbuild .\DownloadManagerSolution.sln -t:rebuild -verbosity:diag -p:Configuration=Release
 
       - name: Release
         uses: ncipollo/release-action@v1
